package main.controllers;

import main.views.pages.NewExamView;
import main.views.pages.ExamPublishedView;

public class CreateExamController {
    
}
