package main.models;

import main.models.Code;
import main.models.Text;

public class Line {
    private String[] line;
    public void setLines(){}
    public void format(){}
}
