package main.models;

public class Name {
    private String first;
    private String last;
    
}
