package main.views.pages;

import main.views.pages.ExamsView;
import main.views.pages.CertificateView;
import main.controllers.RequestCertificateController;

public class CertificatesView {
    
}
