@startuml Design-ClassDiagram
skinparam style strictuml

class ExamsView {
}
class ExamView {
__
-showQuestions():void
-showInstructions():void
-endExam():void
}
class ExamEndedView{
__
-showScore(Result):void
}
class CertificatesView
class CertificateView{
-show(Certificate):void
}
class ResultView{
__
-showScore(Result):void
}

class NewExamView {
-setName(Name):void
-setInstructions(Instructions):void
}

class ExamPublishedView
class AdminExamView

class CreateExamController{
__
-createExam():void
-createQuestion():void
-setQuestions():void
-setAnswers():void
-completeExamCreation():void
}

class PresentExamController {
__
-setResult(Option):void
-chooseExam(Exam_Name):void
-startExam():void
-getAnswer():Answer
-getQuestions():Questions
}

class RequestCertificateController {
__
-requestCeritifcate(Course_Name):void
-getSummary():string
-generateCertificate(Summary):Certificate
}

class Questions{
-domain:string
}
class Answers {
-numOption: int
-correct_option:bool
-justification:string
}
class Exam {
-name:string
-instructions:string
-correctOptions:int[1..*]
__
-getQuestion():Question
-getInstructions():string
}
class Result {
-elections:int[1...*]
-score:float
__
-checkAnswers(Elections, CorrectOptions):float
}

class Certificate {
-student:Name
}

class Name {
    -first:string
    -last:string
}

class Course{
-name:string
-summary:string
-profesor:Name
}

class Lines {
    -line:List<string>
    +setLines():void
    +format():void
}

class Text {
    +format():void
}

class Code {
    +format():void
}

CreateExamController -u- NewExamView
CreateExamController -u- ExamPublishedView

RequestCertificateController -u- CertificatesView
RequestCertificateController -u- CertificateView

PresentExamController -u- ExamView
PresentExamController -u- ResultView
PresentExamController -u- ExamEndedView

CreateExamController -- Exam
PresentExamController -- Exam
PresentExamController -- Result

RequestCertificateController -- Certificate

RequestCertificateController -- Course


ExamsView -- AdminExamView
ExamsView -- CertificatesView
ExamsView -- ExamView
NewExamView -r- ExamPublishedView
AdminExamView -r- NewExamView

ExamEndedView -l- ResultView
ExamView -l- ExamEndedView

CertificatesView -l- CertificateView

Questions *-r- Answers
Exam *-r- Questions

Lines <|-u- Code
Lines <|-u- Text

Lines --* Answers
Lines --* Questions

Exam -l- Result
Result -l- Course
Course -l- Certificate
Name -u- Certificate
Name -u- Course
@enduml